--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 24px;
 }
 .box-container .box-button-router {
@@ -57,7 +57,8 @@ body {
   flex-wrap: wrap;
   padding: 16px;
   gap: 16px;
-  width: calc(50% - 24px);
+  min-width: 245px;
+  max-width: 100%;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
